# Finger-s-World

./: README.md
Finger-s-World/: CMakeLists.txt  file.qrc  image.qrc  js.qrc  main.cpp  main.qml  music.qrc  qml.qrc
Finger-s-World/Components/Buttons/: Finger-s-World - 快捷方式.lnk  GameButton.qml  GameRadioButton.qml
Finger-s-World/Components/Cloud/: GameCloud.qml  WhiteCloud.qml
Finger-s-World/Components/Dialogs/: AmusementModelSelectDialog.qml  GameAmusementDialogs.qml  GameModelSelectDialog.qml
Finger-s-World/Components/FileDialog/: MyFileDialog.qml
Finger-s-World/Components/TextEidt/: GameTextArea.qml
Finger-s-World/Components/Word/: Word.qml
Finger-s-World/Cpp/File/: file.cpp  file.h
Finger-s-World/Js/: GameAmusementViewManager.js  GameBeginViewManager.js  GameEMViewManager.js  GameInitViewManager.js  GamePMViewManager.js  GameSMViewManager.js  GameTMViewManager.js  ToolFunc.js
Finger-s-World/Views/: GameAmusementScoreView.qml  GameAmusementView.qml  GameBeginView.qml
Finger-s-World/Views/EntertainmentMode/: EMDialogs.qml  EMHeartView.qml  EMMainView.qml  EMPlayMethodView.qml  EMScoreView.qml  EMWordView.qml
Finger-s-World/Views/Init/: GameModeSelectView.qml  InitView.qml
Finger-s-World/Views/PracticeMode/: PMDialogs.qml  PMMainView.qml
Finger-s-World/Views/SpeedMode/: SMDialogs.qml  SMMainView.qml  SMTimeSelectionView.qml
Finger-s-World/Views/TeachingMode/: TMMainView.qml  TMOverDialog.qml
Finger-s-World/WordLists/SpeedMode/: list1.txt  list2.txt  list3.txt  list4.txt
Finger-s-World/WordLists/TeachingMode/: list1.txt
(+2 files in other folders)
